Nearly broke the responsive design, but then I fixed it. (Changed #wrap to .wrap and didn't update all CSS.) Updated About page.

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -245,7 +245,7 @@ h1 {
 		}
 
 	}
-	#wrap {
+	.wrap {
 		width: 100%;
 	}
 
