--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -222,7 +222,7 @@ a {
 }
 
 @media screen and (max-width: 959px) {
-	#wrap {
+	.wrap {
 		width: 98%;
 		margin: 0 1%;
 	}
@@ -230,7 +230,7 @@ a {
 }
 
 @media screen and (max-width: 640px) { 
-	#wrap {
+	.wrap {
 		width: 98%;
 		margin: 0 1%;
 	}
